[project]
name = "pandas_ta"
version = "0.7.0b0"
description = "Pandas Technical Analysis, Pandas TA, is a free, Open Source, and easy to use Technical Analysis library with a Pandas DataFrame Extension. It has over 200 indicators, utility functions and TA Lib Candlestick Patterns. Beyond TA feature generation, it has a flat library structure, it's own DataFrame Extension (called 'ta'), Custom Indicator Studies and Independent Custom Directory."
readme = "README.md"
authors = [{ name = "Kevin Johnson", email = "appliedmathkj@gmail.com" }]
maintainers = [{ name = "Kevin Johnson", email = "appliedmathkj@gmail.com" }]
license = { text = "The MIT License (MIT)" }
keywords = [
    "technical analysis",
    "finance",
    "trading",
    "backtest",
    "trading bot",
    "features",
    "pandas",
    "numpy",
    "numba",
    "vectorbt",
    "yfinance",
    "polygon",
    "python3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numba>=0.61.2",
    "numpy>=2.0.0",
    "pandas>=2.3.0",
    "pandas-datareader",
    "scipy>=1.12",
]

[project.urls]
"Homepage" = "https://github.com/twopirllc/pandas-ta"
"Download" = "https://github.com/twopirllc/pandas-ta.git"

[project.optional-dependencies]
full = [
    "alphaVantage-api",
    "matplotlib",
    "mplfinance",
    "python-dotenv",
    "sklearn",
    "statsmodels",
    "stochastic",
    "TA-Lib>=0.4.28",
    "tqdm",
    "vectorbt",
    "yfinance>=0.2.36",
]
test = [
    "numba>=0.59.0",
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "pandas-datareader",
    "pytest==7.1.2",
    "TA-Lib>=0.4.28",
    "yfinance>=0.2.36",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pandas_ta*"]
